--- a/P1.ipynb
+++ b/P1.ipynb
@@ -367,7 +367,7 @@
     "def lines_linreg(lines_array):\n",
     "    ### Select the 0th and 2nd index which will provide the xval and reshape to extract x values\n",
     "    x = np.reshape(lines_array[:, [0, 2]], (1, len(lines_array) * 2))[0]\n",
-    "    ### Select the 1st and 3rd index which will provide the yval and reshape to extract 7 values\n",
+    "    ### Select the 1st and 3rd index which will provide the yval and reshape to extract y values\n",
     "    y = np.reshape(lines_array[:, [1, 3]], (1, len(lines_array) * 2))[0]\n",
     "    A = np.vstack([x, np.ones(len(x))]).T\n",
     "    m, c = np.linalg.lstsq(A, y)[0]\n",
